# QuantumDynamicsLab

./: LICENSE  Note_1.ipynb  Note_2.ipynb  Note_3.ipynb  Note_4.ipynb  Note_6.ipynb  README.md  exercise1_sol.ipynb  exercise4_sol.ipynb  exercise5_sol.ipynb  exercise6_sol.ipynb  lecture_1.ipynb  lecture_2.ipynb  lecture_3.ipynb  lecture_5.ipynb  lecture_6.ipynb  pyproject.toml
.github/workflows/: python_CI.yml
Comp_Quant_Dynam/: __init__.py  hamiltonians.py  integrators.py  operators.py  plotting.py  qr.py  unitaries.py  utility.py
Note/: Basics.ipynb  Note_1.ipynb  Note_2.ipynb  Note_5.ipynb  Note_6.ipynb  Note_7.ipynb
Notebooks/: exercise1.ipynb  exercise2.ipynb  exercise3.ipynb  exercise4.ipynb  exercise5.ipynb  exercise6.ipynb  exercise7.ipynb
Solutions/: exercise1_sol.ipynb  exercise1_sol1.ipynb  exercise3_sol3.ipynb  exercise4_sol.ipynb  exercise5_sol.ipynb  exercise6_sol.ipynb  exercise7_sol.ipynb  python_tutorial_1.ipynb
tests/: exercise_sheets_test.py  hamiltonians_test.py  integrators_test.py  utility_test.py
