

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Comp_Quant_Dynam"
version = "0.0.1"
description = "Code repository of Computational Quantum Dynamics course"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ipython",
    "ipywidgets",
    "notebook<7",
    "qutip",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "nbconvert",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/Comp_Quant_Dynam/__init__.py",
] 